--- a/templates/index.html
+++ b/templates/index.html
@@ -171,6 +171,11 @@
         background-color: #00c9ff;
         color: #0d0f1a;
       }
+
+      #searchTag::placeholder {
+        color: #66738a;
+        opacity: 1;
+      }
     </style>
   </head>
   <body>
