--- a/templates/writePost.html
+++ b/templates/writePost.html
@@ -51,6 +51,11 @@
         color: #ffffff;
       }
 
+      #name::placeholder, #tag::placeholder, #message::placeholder {
+        color: #66738a;
+        opacity: 1;
+      }
+
       .form-section {
         background-color: #1d2038;
         padding: 2rem;
